# bmbp_frameword

./: Cargo.toml  README.md  build_scss.sh  build_tsx.sh
src/: lib.rs  view.rs
src/action/: root.rs
src/view/: mod.rs
static/bmbp_framework/css/default/: index.css.map
static/bmbp_framework/js/home/: index.js
web/templates/: framework.html
web/tsx/home/: action.tsx  index.tsx
