[package]
name = "bmbp_framework"
version = "0.0.1"
edition = "2021"
[dependencies]
bmbp_vars = { workspace = true }
bmbp_abc = { workspace = true }
salvo = { workspace = true }
tera = { workspace = true }
rust-embed = "8.5.0"
chrono = "0.4.38"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = { version = "1.0.132", features = ["default"] }
